# grepiku

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  grepiku.json  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
docker/codex-runner/: Dockerfile  package.json
internal_harness/codex-slim/: Cargo.toml
internal_harness/codex-slim/codex-api/: Cargo.toml
prisma/: schema.prisma
src/: server.ts  worker.ts
src/config/: env.ts
src/db/: client.ts  records.ts
src/github/: auth.ts  webhooks.ts
src/mcp/: ide-server.ts  tool-defs.ts
src/providers/: commentGuards.ts  commentResolution.ts  pullRequestGuards.ts  registry.ts  repoCheckout.ts  types.ts  webhookHandler.ts  webhookRouter.ts
src/queue/: enqueue.ts  index.ts  jobId.ts
test/: chunking.test.ts  coverage.test.ts  dashboard-auth.test.ts  demo-review.test.ts  finding-lifecycle.test.ts  finding-match.test.ts  finding-weights.test.ts  github-review-thread-map.test.ts  graph-inferred-promotion.test.ts  incremental-context.test.ts  local-compare.test.ts  mcp-ide-server.test.ts  mention-git.test.ts  mention-trigger.test.ts  mentions-reply.test.ts  path-normalization.test.ts  queue-job-id.test.ts  repo-checkout.test.ts  repo-config.test.ts  repo-memory.test.ts  retrieval-embeddings.test.ts  retrieval-selection.test.ts  review-checks.test.ts  review-diagram.test.ts  review-json.test.ts  review-prompts.test.ts  review-quality.test.ts  scoped-config.test.ts  traversal-context.test.ts  traversal-metrics.test.ts  traversal-quality-cli.test.ts  webhook-handler.test.ts
(+103 files in other folders)
